# RuTennis

./: Cargo.toml
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/data/: xgboost_model.json
src-tauri/src/datalayer/: datalayer.rs
src-tauri/src/interface/: interface.rs
src-tauri/src/lib/: lib.rs
src-tauri/src/math/: mathematics.rs
src-tauri/src/player/: player.rs
src/datalayer/: datalayer.rs  mod.rs  train_model.py
src/interface/: interface.rs
src/math/: mathematics.rs  mod.rs
src/player/: player.rs
src/test/: backtest.rs
