[package]
name = "Tennis"
version = "0.1.0"
edition = "2024"

[dependencies]
skillratings = "0.28"
polars = { version = "0.37", features = ["lazy", "csv"] }
csv = "1.3"         # NEU: Um unsere Trainingsdaten rasend schnell zu speichern
rand = "0.8"        # NEU: Für den 50/50 Split
smartcore = "0.2.0"
